# faster-lio

./: .gitignore  .gitmodules  README.md  controller.xml  faster_lio.sh  waypoints.yaml
app/: run_mapping_online.cc
config/: mid360.yaml
data/: small_scans.pcd  waypoints.yaml
include/: common_lib.h  imu_processing.hpp  laser_mapping.h  use-ikfom.hpp
livox_ros_driver2/launch_ROS1/: rviz_MID360.launch
record_files/: record.sh  record_sim.sh
rviz_cfg/: loam_livox.rviz
scripts/: faster_lio.zsh
sh_files/: apm.sh  camera_caliberate.sh  camera_detect.sh  camera_detect_.sh  capture_image.sh  ego_planner.sh  faster_lio.sh  faster_lio_bag.sh  faster_lio_construct_map.sh  fastlio.sh  imu_and_ekf.sh  lidar_imu.sh  modify_map.sh  realsense.sh  record.sh  record_ego.sh  record_lidar_imu.sh  record_setup.sh  record_video.sh  rosbag_record.sh  takeoff.sh  task_planner.sh  video_end.sh  waypoint_record.sh
src/: laser_mapping.cc  pointcloud_preprocess.cc
src/camera_detect/: CMakeLists.txt  aruco_detect.sh  camera_info.yaml  camera_test copy.launch  camera_test.launch  package.xml
src/image-manager/: CMakeLists.txt  package.xml
src/image-manager/include/: image_manager.hpp
src/image-manager/launch/: image_manager.launch
src/image-manager/src/: image_manager.cpp  image_manager_node.cpp
src/livox_ros_driver2/config/: MID360_config.json
src/livox_ros_driver2/launch_ROS1/: msg_MID360.launch
start_service/: inspection.service  inspection_command.py  process_manager.py  start_server copy.py  start_server.py  start_service.sh
(+1 files in other folders)
